added some logic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="final">
     <h1>Go</h1>
-    <button id="reply">Reply</button>
+    <button id="replay">Reply</button>
   </div>
 
   <script src="./script.js"></script>
